dim/spec/test_input/invalid_input/same_module_different_owner.dim
Config:
  - originator: ABC
    files: modules/valid_test_1.dim
    category: system
  - originator: DEF
    files: modules/valid_test_2.dim
    category: system
